@startuml

package "Bitcoin Data Model" {

    class blocks {
        + height: int
    }

    class transactions {
        + id: int
        + hash: string
        + index_in_block: int
        + is_duplicate: bool
        ---
        + block: Block
    }

    class outputs {
        + id: int
        + index_in_tx: int
        + value: float
        + valid: bool
        ---
        + transaction: Transaction
        + address: Address
    }

    class inputs {
        + id: int
        + index_in_tx: int
        ---
        + prev_out: Output
        + transaction: Transaction
    }

    class addresses {
        + addr: string
    }

    transactions "1" -- "N" outputs : contains
    transactions "1" -- "N" inputs : contains
    blocks "1" -- "N" transactions : contains
    outputs "N" -- "1" addresses : Output Address
    inputs "1" -- "1" outputs : Previous Output

}

@enduml
